fixed mobile issue with maps and pdf alignment

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -374,7 +374,7 @@ h5 {
 }
 @media screen and (max-width: 1080px){
 	.container {
-		width: 90%;
+		width: 70%;
 	}
 	.w3_info h2 {
 		font-size: 24px;
